--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-body{
+/* body{
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
@@ -8,4 +8,4 @@ body{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-}
+} */
