--- a/src/Components/Dashboard/Sidebar/Sidebar.css
+++ b/src/Components/Dashboard/Sidebar/Sidebar.css
@@ -4,7 +4,7 @@
     width: 200px;
     background-color: #f1f1f1;
     position: fixed;
-    height: 100%;
+    height: 1000%;
     overflow: auto;
     text-align: center;
     font-weight: bold;
@@ -29,11 +29,11 @@
     color: white;
   }
   
-  div.content {
+  /* div.content {
     margin-left: 200px;
     padding: 1px 16px;
     height: 1000px;
-  }
+  } */
   
   @media screen and (max-width: 700px) {
     .sidebar {
@@ -42,8 +42,8 @@
       position: relative;
    
     }
-    .sidebar a {float: left;}
-    div.content {margin-left: 0;}
+    /* .sidebar a {float: left;}
+    div.content {margin-left: 0;} */
   }
   
   @media screen and (max-width: 400px) {
